--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -140,6 +140,11 @@ header a {
     color: #f1f1f1;
     width: 100%;
     padding: 20px 20px;
+    display: none;
+}
+
+.container:hover .bottom {
+    display: flex
 }
 /* end work styling */
 
@@ -168,8 +173,8 @@ header a {
 
 .contacts div a {
     text-decoration: none;
-    color: var(--secondary);
-    font-size: 1.75vw;
+    color: var(--tertiary);
+    font-size: 1.5vw;
 }
 /* end contact styling */
 
