began responsive styling

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -35,6 +35,8 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    align-items: center;
+    z-index: 9999;
 }
 
 header h1 {
@@ -184,7 +186,7 @@ footer {
     text-align: center;
     color: var(--tertiary);
     font-weight: lighter;
-    font-size: 8px;
+    font-size: .5vw;
     line-height: 1.5;
     margin: 50px auto;
 }
@@ -194,20 +196,130 @@ footer {
 /* begin responsive styling */
 /* media query for smaller desktop screens and smaller */
 @media screen and (max-width: 980px) {
-    
+    header h1 {
+        font-size: 2.25vw;
+    }
+
+    header nav ul li a {
+        font-size: 1.75vw;
+    } 
+
+    .about h2 {
+        font-size: 2.25vw;
+    }
+
+    .work h2 {
+        font-size: 2.25vw;
+    }
+
+    .main_div div {
+        margin-bottom: 20px;
+    }
+
+    .contact h2 {
+        font-size: 2.25vw;
+    }
+
+    .contacts div a {
+        font-size: 1.75vw;
+    }
+
+    footer {
+        font-size: 0.5vw;
+    }
+
+    .about p {
+       font-size: 1.75vw;
+    }
 }
 
 
 
 /* media query for tablets and smaller */
 @media  screen and (max-width: 768px) {
+    header h1 {
+        font-size: 2.5vw;
+    }
 
+    header nav ul li a {
+        font-size: 2.0vw;
+    } 
+
+    .about h2 {
+        font-size: 2.5vw;
+    }
+
+    .work h2 {
+        font-size: 2.5vw;
+    }
+
+    .main_div div {
+        margin-bottom: 20px;
+    }
+
+    .contacts {
+        margin: 25px auto;
+    }
+
+    .contact h2 {
+        font-size: 2.5vw;
+    }
+
+    .contacts div a {
+        font-size: 2.0vw;
+    }
+
+    footer {
+        font-size: .75vw;
+    }
+
+    .about p {
+       font-size: 2.0vw;
+    }
 }
 
 
 
 /* media query for mobile phones and smaller */
 @media screen and (max-width: 575px) {
+    header h1 {
+        font-size: 2.75vw;
+    }
 
+    header nav ul li a {
+        font-size: 2.25vw;
+    } 
+
+    .about h2 {
+        font-size: 2.75vw;
+    }
+
+    .work h2 {
+        font-size: 2.75vw;
+    }
+
+    .main_div div {
+        margin-bottom: 20px;
+    }
+
+    .contacts {
+        margin: 25px auto;
+    }
+
+    .contact h2 {
+        font-size: 2.75vw;
+    }
+
+    .contacts div a {
+        font-size: 2.25vw;
+    }
+
+    footer {
+        font-size: 1.0vw;
+    }
+
+    .about p {
+       font-size: 2.25vw;
+    }
 }
 /* end responsive styling */
