--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -133,6 +133,11 @@ header a {
     max-width: 100%;
     margin: 0 0;
 }
+
+.container img {
+    max-width: 300px;
+    max-height: 300px;
+}
   
 .container .bottom {
     position: absolute;
@@ -320,6 +325,55 @@ footer {
 
     .about p {
        font-size: 2.25vw;
+    }
+}
+
+
+/* media query for mobile phones and smaller */
+@media screen and (max-width: 400px) {
+    .container img {
+        max-height: 250px;
+        max-width: 250px;
+    }
+    
+    header h1 {
+        font-size: 3.5vw;
+    }
+
+    header nav ul li a {
+        font-size: 3.25vw;
+    } 
+
+    .about h2 {
+        font-size: 3.5vw;
+    }
+
+    .work h2 {
+        font-size: 3.5vw;
+    }
+
+    .main_div div {
+        margin-bottom: 20px;
+    }
+
+    .contacts {
+        margin: 25px auto;
+    }
+
+    .contact h2 {
+        font-size: 3.5vw;
+    }
+
+    .contacts div a {
+        font-size: 3.5vw;
+    }
+
+    footer {
+        font-size: 1.5vw;
+    }
+
+    .about p {
+       font-size: 3.5vw;
     }
 }
 /* end responsive styling */
