--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -126,6 +126,11 @@ header a {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    align-items: flex-end;
+}
+
+.start {
+    align-self: flex-start;
 }
 
 .container {
