--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -125,14 +125,40 @@ header a {
   color: var(--secondary);
   font-size: 2vw;
   font-weight: lighter;
-  width: 25%;
-  margin: 50px auto 0 auto;
+  margin: 50px auto 50px auto;
   text-align: center;
   border-bottom: 1px solid var(--tertiary);
+  flex-basis: 100%;
+}
+
+.feature {
+  flex-basis: 100%;
+  justify-content: center;
+}
+
+.feature_container {
+  position: relative;
+  margin: 0 0;
+}
+
+.feature_container .feature_bottom {
+  position: absolute;
+  bottom: 0;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: 100%;
+  padding: 20px 20px;
+  display: none;
+}
+
+.feature_container:hover .feature_bottom {
+  display: flex;
 }
 
 .main_div {
   margin: 50px auto 0 auto;
+  flex-basis: 60%;
 }
 
 .container {
