minor layout updates

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -95,7 +95,7 @@ header a {
 }
 
 .about-image div {
-  flex-basis: 50%;
+  flex-basis: 40%;
   align-items: center;
 }
 
@@ -162,7 +162,6 @@ header a {
 
 .container {
   position: relative;
-  max-width: 100%;
   margin: 0 0;
 }
 
@@ -212,7 +211,6 @@ header a {
 }
 
 .contacts div {
-  /* max-width: 20%; */
   margin: 0 20px;
 }
 
@@ -360,7 +358,7 @@ footer {
   }
 }
 
-/* media query for mobile phones and smaller */
+/* media query for low resmobile phones and smaller */
 @media screen and (max-width: 400px) {
   .container img {
     max-height: 250px;
