updated under 400 styles

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -355,6 +355,10 @@ footer {
     font-size: 2.75vw;
   }
 
+  .about p {
+    font-size: 2.25vw;
+  }
+
   .about-image div {
     flex-basis: 100%;
   }
@@ -394,29 +398,24 @@ footer {
   footer {
     font-size: 1vw;
   }
-
-  .about p {
-    font-size: 2.25vw;
-  }
 }
 
 /* media query for low resmobile phones and smaller */
 @media screen and (max-width: 400px) {
-  .container img {
-    max-height: 250px;
-    max-width: 250px;
-  }
-
   header h1 {
-    font-size: 3.5vw;
+    font-size: 20px;
   }
 
   header nav ul li a {
-    font-size: 3.25vw;
+    font-size: 16px;
   }
 
   .about h2 {
-    font-size: 3.5vw;
+    font-size: 20px;
+  }
+
+  .about p {
+    font-size: 14px;
   }
 
   .about-image img {
@@ -424,7 +423,7 @@ footer {
   }
 
   .work h2 {
-    font-size: 3.5vw;
+    font-size: 20px;
   }
 
   .feature_container img {
@@ -444,19 +443,16 @@ footer {
   }
 
   .contact h2 {
-    font-size: 3.5vw;
+    font-size: 20px;
   }
 
   .contacts div a {
-    font-size: 3.5vw;
+    font-size: 14px;
   }
 
-  footer {
-    font-size: 1.5vw;
-  }
-
-  .about p {
-    font-size: 3.5vw;
+  footer h2,
+  p {
+    font-size: 6px;
   }
 }
 /* end responsive styling */
