--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -88,7 +88,7 @@ header a {
   color: var(--secondary);
   font-size: 2vw;
   font-weight: lighter;
-  margin: 50px auto 0 auto;
+  margin: 25px auto 0 auto;
   text-align: center;
   border-bottom: 1px solid var(--tertiary);
   flex-basis: 100%;
@@ -102,12 +102,12 @@ header a {
 .about-image img {
   max-width: 300px;
   max-height: 300px;
-  margin: 10% 10%;
+  margin: 20px auto 0 auto;
 }
 
 .about-image p {
   color: var(--tertiary);
-  margin: 10% 10%;
+  margin: 10px auto;
   font-size: 1.5vw;
   text-align: left;
 }
@@ -156,7 +156,7 @@ header a {
 }
 
 .main_div {
-  margin: 50px auto 0 auto;
+  margin: 5px auto 0 auto;
   flex-basis: 60%;
 }
 
@@ -168,7 +168,7 @@ header a {
 .container img {
   max-width: 300px;
   max-height: 300px;
-  margin: 5px;
+  margin: 0 5px 5px 5px;
 }
 
 .container .bottom {
@@ -208,7 +208,7 @@ header a {
   flex-wrap: wrap;
   justify-content: space-evenly;
   flex-basis: 100%;
-  margin: 50px auto 50px auto;
+  margin: 10px auto 0 auto;
 }
 
 .contacts div {
@@ -229,7 +229,7 @@ footer {
   font-weight: lighter;
   font-size: 0.35vw;
   line-height: 1.5;
-  margin: 50px auto;
+  margin: 30px auto;
 }
 /* end footer styling */
 
@@ -237,29 +237,34 @@ footer {
 /* media query for smaller desktop screens and smaller */
 @media screen and (max-width: 1100px) {
   header h1 {
-    font-size: 2.25vw;
+    font-size: 24px;
   }
 
   header nav ul li a {
-    font-size: 1.75vw;
+    font-size: 18px;
   }
 
   .about h2 {
-    font-size: 2.25vw;
+    font-size: 22px;
     margin: 10px 0 0 0;
   }
 
+  .about p {
+    font-size: 16px;
+  }
+
   .about-image img {
-    max-height: 250px;
+    max-height: 275px;
   }
 
   .work h2 {
-    font-size: 2.25vw;
-    margin: 20px auto;
+    font-size: 22px;
+    margin: 10px auto;
   }
 
   .feature_container img {
-    max-height: 250px;
+    margin: 10px auto;
+    max-height: 275px;
   }
 
   .main_div div {
@@ -268,55 +273,58 @@ footer {
   }
 
   .container img {
-    max-height: 250px;
+    max-height: 300px;
   }
 
   .contact h2 {
-    font-size: 2.25vw;
+    font-size: 22px;
   }
 
   .contacts div a {
-    font-size: 1.75vw;
+    font-size: 14px;
   }
 
-  footer {
-    font-size: 0.5vw;
+  footer h2,
+  p {
+    font-size: 8px;
     margin: 20px auto;
-  }
-
-  .about p {
-    font-size: 1.75vw;
   }
 }
 
 /* media query for tablets and smaller */
 @media screen and (max-width: 768px) {
   header h1 {
-    font-size: 2.5vw;
+    font-size: 24px;
   }
 
   header nav ul li a {
-    font-size: 2vw;
+    font-size: 18px;
   }
 
   .about h2 {
-    font-size: 2.5vw;
+    font-size: 22px;
+  }
+
+  .about p {
+    font-size: 16px;
   }
 
   .about-image img {
-    max-height: 200px;
+    max-height: 250px;
   }
 
   .work h2 {
-    font-size: 2.5vw;
+    font-size: 22px;
+    margin: 10px auto;
   }
 
   .feature_container img {
-    max-height: 200px;
+    margin: 10px auto;
+    max-height: 250px;
   }
 
   .container img {
-    max-height: 200px;
+    max-height: 300px;
   }
 
   .contacts {
@@ -324,39 +332,37 @@ footer {
   }
 
   .contact h2 {
-    font-size: 2.5vw;
+    font-size: 22px;
     margin: 0 auto;
   }
 
   .contacts div a {
-    font-size: 2vw;
+    font-size: 14px;
   }
 
-  footer {
-    font-size: 0.75vw;
-  }
-
-  .about p {
-    font-size: 2vw;
+  footer h2,
+  p {
+    font-size: 8px;
   }
 }
 
 /* media query for mobile phones and smaller */
 @media screen and (max-width: 575px) {
   header h1 {
-    font-size: 2.75vw;
+    font-size: 24px;
   }
 
   header nav ul li a {
-    font-size: 2.25vw;
+    font-size: 18px;
   }
 
   .about h2 {
-    font-size: 2.75vw;
+    font-size: 22px;
   }
 
   .about p {
-    font-size: 2.25vw;
+    font-size: 16px;
+    text-align: center;
   }
 
   .about-image div {
@@ -364,23 +370,24 @@ footer {
   }
 
   .about-image img {
-    max-height: 150px;
+    max-height: 225px;
   }
 
   .work h2 {
-    font-size: 2.75vw;
+    font-size: 22px;
   }
 
   .feature_container img {
-    max-height: 150px;
+    margin: 10px auto;
+    max-height: 175px;
   }
 
   .main_div div {
-    margin-bottom: 20px;
+    margin-bottom: 22px;
   }
 
   .container img {
-    max-height: 150px;
+    max-height: 225px;
   }
 
   .contacts {
@@ -388,15 +395,16 @@ footer {
   }
 
   .contact h2 {
-    font-size: 2.75vw;
+    font-size: 22px;
   }
 
   .contacts div a {
-    font-size: 2.25vw;
+    font-size: 14px;
   }
 
-  footer {
-    font-size: 1vw;
+  footer h2,
+  p {
+    font-size: 6px;
   }
 }
 
@@ -423,11 +431,12 @@ footer {
   }
 
   .work h2 {
-    font-size: 22px;
+    font-size: 25px;
   }
 
   .feature_container img {
     max-height: 125px;
+    margin: 10px auto;
   }
 
   .main_div div {
